@@ -10,6 +10,7 @@
 	(thanks to asxbsd).
   Let user removes any automatic installed package.
   Remove commands now use -R option.
+  Added DragonFlyBSD support.
   Added GhostBSD support (thanks to ringo32 and rkramerbsd). 
   Added search feature also in Information tab.
   Heavily threaded version, minimizing interface freezing.
